<resources>
    //Application name
    <string name="app_name">RemindMe</string>

    //Reminder edit label
    <string name="edit_label">Reminder edit</string>

    <!--Settings Activity Label-->
    <string name="title_activity_settings">Settings</string>

    //Name for Search button
    <string name="search_title">Search</string>

    Menu items for navigation drawer
    <string name="menu_item_history">History</string>
    <string name="menu_item_ideas">Ideas</string>
    <string name="menu_item_todo">TODO</string>
    <string name="menu_item_birthdays">Birthdays</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_information">Information</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    //Tab names
    <string name="tab_item_history">History</string>
    <string name="tab_item_ideas">Ideas</string>
    <string name="tab_item_todo">TODO</string>
    <string name="tab_item_birthdays">Birthdays</string>

    //CardView specs
    <string name="card_checkbox">Done</string>
    <string name="card_menu_edit">Edit</string>
    <string name="card_menu_delete">Delete</string>

    //Empty recycler view state
    <string name="empty_state">Nothing to show</string>

    //Add reminder activity strings
    <string name="new_item_header">Header:</string>
    <string name="new_item_header_hint">Enter the Header</string>
    <string name="new_item_content">Content:</string>
    <string name="new_item_content_hint">Enter new reminder</string>
    <string name="new_item_category">Category:</string>
    <string name="new_item_date">Date:</string>
    <string name="new_item_date_hint">Enter the Date</string>
    <string name="new_item_ok_button">OK</string>
    <string name="header_error">Please, enter the header</string>
    <string name="date_error">Please, enter the date</string>

    //String array for spinner
    <string-array name="spinner_array">
        <item>Ideas</item>
        <item>TODO</item>
        <item>Birthdays</item>
    </string-array>

    //Strings for using in database
    <string name="db_ideas">Ideas</string>
    <string name="db_todo">TODO</string>
    <string name="db_birthdays">Birthdays</string>

    //Language preferences
    <string name="pref_language_title">Language</string>
    <string name="pref_default_language">Default</string>
    <string-array name="pref_language_entry">
        <item>Default</item>
        <item>English</item>
        <item>Russian</item>
    </string-array>

    //Notification type preferences
    <string name="pref_notification_type_title">Notification Type</string>
    <string name="pref_default_notification">Vibrate</string>
    <string-array name="pref_notification_entry">
        <item>Just Notification</item>
        <item>Vibrate</item>
        <item>Sound and Vibrate</item>
    </string-array>

    //Notification time preferences
    <string name="pref_notification_time_title">Notification Time</string>
    <string name="pref_default_timeNotification">At the date</string>
    <string-array name="pref_notification_entry_time">
        <item>At the date</item>
        <item>The day before</item>
    </string-array>

</resources>
