<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_reminder_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_item_header"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/new_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/new_item_header_hint"
            android:lines="2"
            android:gravity="top|left"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="20sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:text="@string/new_item_content"/>

        <EditText
            android:id="@+id/new_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/new_item_content_hint"
            android:lines="5"
            android:gravity="top|left"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="20sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:text="@string/new_item_category"/>

        <Spinner
            android:id="@+id/new_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:entries="@array/spinner_array"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:text="@string/new_item_date"/>

        <TextView
            android:id="@+id/new_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:background="@color/colorWhite"
            android:hint="@string/new_item_date_hint"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="20sp"
            android:onClick="showDateDialog"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <Button
            android:id="@+id/new_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/new_item_ok_button"/>

    </LinearLayout>

</ScrollView>




